final version after class

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="main.js" type="module"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Title</title>
 </head>
 <body>
 <main>
@@ -15,15 +12,19 @@
     <h1>Data Fetchen & Event Listeners</h1>
     <p>Get user by ID (leave empty to retrieve all users)</p>
 
-    <label>
+    <!-- Input veld -->
+    <label for="user-id">
         <input id="user-id" type="number">
     </label>
-    <button id="button" type="button">Get User(s)</button>
 
+    <!-- Button -->
+    <button id="button" type="button">Get Users</button>
+
+    <!-- List die we gaan vullen met users /items -->
+    <ul id="list-of-users"></ul>
+
+    <!-- Errors in de UI tonen bij status 404 of 500 -->
     <span id="error-message"></span>
-
-    <ul id="list-of-users">
-    </ul>
 
 </main>
 </body>
